committee text color

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
 
 							<p>Previous meetings, including minutes and resources, can be found here!</p>
 
-							<table style="width: 1200px; max-width: 100%; color: black">
+							<table style="width: 1600px; max-width: 100%">
 								<tr>
-									<th style="background-color: #ad4d38; text-align: left; color: black">Date & Time</th>
-									<th style="background-color: #ad4d38; text-align: left; color: black">Discussion Topic</th>
-									<th style="background-color: #ad4d38; text-align: left; color: black">Chair</th>
-									<th style="background-color: #ad4d38; text-align: left; color: black">Speaker</th>
-									<th style="background-color: #ad4d38; text-align: left; color: black">Recommended Reading</th>
+									<th style="background-color: #ad4d38; text-align: left; color: white">Date & Time</th>
+									<th style="background-color: #ad4d38; text-align: left; color: white">Discussion Topic</th>
+									<th style="background-color: #ad4d38; text-align: left; color: white">Chair</th>
+									<th style="background-color: #ad4d38; text-align: left; color: white">Speaker</th>
+									<th style="background-color: #ad4d38; text-align: left; color: white">Recommended Reading</th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
 									<th style="background-color: #FFFFFF; text-align: left; color: black">20/07/23 3-4pm</th>
@@ -180,46 +180,46 @@
 									<th style="background-color: #ad4d38; text-align: left;">Links</th>
 								</tr>
 								<tr>
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/sob.jpeg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Sean O'Brien<br>(he/him)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Chair</th>
-									<th style="background-color: #FFFFFF; text-align: left;">sobrien27 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/sob.jpeg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Sean O'Brien<br>(he/him)</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Chair</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">sobrien27 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/sm.jpeg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Steph Merritt<br>(they/them)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Treasurer</th>
-									<th style="background-color: #FFFFFF; text-align: left;">s.merritt [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/sm.jpeg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Steph Merritt<br>(they/them)</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Treasurer</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">s.merritt [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/ld.jpg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Lucy Dolan<br>(she/her)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Speaker Liaison</th>
-									<th style="background-color: #FFFFFF; text-align: left;">ldolan05 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/ld.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Lucy Dolan<br>(she/her)</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Speaker Liaison</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">ldolan05 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/jmm.jpg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Joseph Murtagh<br>(he/him)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Digital Communications</th>
-									<th style="background-color: #FFFFFF; text-align: left;">jmurtagh05 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/jmm.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Joseph Murtagh<br>(he/him)</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Digital Communications</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">jmurtagh05 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"><img src="images/dj.jpg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">David Jackson<br>(he/him)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Committee Member<br>(PGR)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">djackson823 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/dj.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">David Jackson<br>(he/him)</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Committee Member<br>(PGR)</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">djackson823 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left;"></th>
-									<th style="background-color: #FFFFFF; text-align: left;">Mandy Hewitt<br>(she/her)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">Committee Member<br>(PGR)</th>
-									<th style="background-color: #FFFFFF; text-align: left;">hhewitt01 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left;"> </th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"></th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Mandy Hewitt<br>(she/her)</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">Committee Member<br>(PGR)</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black">hhewitt01 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
 								</tr>
 							</table>
 						</div>
