text align centre

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 									<th style="background-color: #ad4d38; text-align: left;">Email</th>
 									<th style="background-color: #ad4d38; text-align: left;">Links</th>
 								</tr>
-								<tr style="height: 150">
+								<tr style="text-align: center;">
 									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/sob.jpeg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; text-align: left; color: black">Sean O'Brien<br>(he/him)</th>
 									<th style="background-color: #FFFFFF; text-align: left; color: black">Chair</th>
