--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 									<th style="background-color: #ad4d38; text-align: left;">Links</th>
 								</tr>
 								<tr style="text-align: center;">
-									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/sob.jpeg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/sob.jpeg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; text-align: left; color: black">Sean O'Brien<br>(he/him)</th>
 									<th style="background-color: #FFFFFF; text-align: left; color: black">Chair</th>
 									<th style="background-color: #FFFFFF; text-align: left; color: black">sobrien27 [at] qub.ac.uk</th>
