text align again

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
 								</tr>
 								<tr style="text-align: center;">
 									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/sob.jpeg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Sean O'Brien<br>(he/him)</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Chair</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">sobrien27 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black"><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Sean O'Brien<br>(he/him)</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Chair</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">sobrien27 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
 									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/sm.jpeg" width="150" height="150"></th>
