--- a/index.html
+++ b/index.html
@@ -187,39 +187,39 @@
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/sm.jpeg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Steph Merritt<br>(they/them)</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Treasurer</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">s.merritt [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><img src="images/sm.jpeg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Steph Merritt<br>(they/them)</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Treasurer</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">s.merritt [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/ld.jpg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Lucy Dolan<br>(she/her)</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Speaker Liaison</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">ldolan05 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><img src="images/ld.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Lucy Dolan<br>(she/her)</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Speaker Liaison</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">ldolan05 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/jmm.jpg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Joseph Murtagh<br>(he/him)</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Digital Communications</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">jmurtagh05 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><img src="images/jmm.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Joseph Murtagh<br>(he/him)</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Digital Communications</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">jmurtagh05 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left; color: black"><img src="images/dj.jpg" width="150" height="150"></th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">David Jackson<br>(he/him)</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Committee Member<br>(PGR)</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">djackson823 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><img src="images/dj.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">David Jackson<br>(he/him)</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Committee Member<br>(PGR)</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">djackson823 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
 								<tr style="background-color: #FFFFFF; text-align: left;">
-									<th style="background-color: #FFFFFF; text-align: left; color: black"></th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Mandy Hewitt<br>(she/her)</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">Committee Member<br>(PGR)</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black">hhewitt01 [at] qub.ac.uk</th>
-									<th style="background-color: #FFFFFF; text-align: left; color: black"> </th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"></th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Mandy Hewitt<br>(she/her)</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Committee Member<br>(PGR)</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black">hhewitt01 [at] qub.ac.uk</th>
+									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
 							</table>
 						</div>
