row divider colour

--- a/index.html
+++ b/index.html
@@ -179,42 +179,42 @@
 									<th style="background-color: #ad4d38; text-align: left;">Email</th>
 									<th style="background-color: #ad4d38; text-align: left;">Links</th>
 								</tr>
-								<tr style="text-align: left; border-bottom: 1px solid black;">
+								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/sob.jpeg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Sean O'Brien<br>(he/him)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Chair</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">sobrien27 [at] qub.ac.uk</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><a href="https://astro-sobrien.github.io/">&#127760; Personal Website</a></th>
 								</tr>
-								<tr style="text-align: left; border-bottom: 1px solid black;">
+								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><img src="images/sm.jpeg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Steph Merritt<br>(they/them)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Treasurer</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">s.merritt [at] qub.ac.uk</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
-								<tr style="text-align: left; border-bottom: 1px solid black;">
+								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><img src="images/ld.jpg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Lucy Dolan<br>(she/her)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Speaker Liaison</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">ldolan05 [at] qub.ac.uk</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
-								<tr style="text-align: left border-bottom: 1px solid black;">
+								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><img src="images/jmm.jpg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Joseph Murtagh<br>(he/him)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Digital Communications</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">jmurtagh05 [at] qub.ac.uk</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
-								<tr style="text-align: left; border-bottom: 1px solid black;">
+								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"><img src="images/dj.jpg" width="150" height="150"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">David Jackson<br>(he/him)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Committee Member<br>(PGR)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">djackson823 [at] qub.ac.uk</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
-								<tr style="text-align: left; border-bottom: 1px solid black;">
+								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Mandy Hewitt<br>(she/her)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Committee Member<br>(PGR)</th>
