bar colours, grules bolding

--- a/index.html
+++ b/index.html
@@ -40,29 +40,32 @@
 						<div id="groundrules" align="left" style="color: #d0a99f; padding-left: 30pix; padding-right: 30pix">
 							<font size="2">
 							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
-								our own guidance below:</p>
-							<ol align="center" style="line-height:90%">
-								<li>This is a space for everyone to learn and grow.</li>
+								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings. These points where
+								inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/">
+								the University of Warwick Equitea</a> and <a href="https://sites.google.com/umich.edu/astro-dei/home?authuser=0">the University of Michigan Equitea</a>.</p>
+							
+								<ol align="center" style="line-height:90%">
+								<li><b>This is a space for everyone to learn and grow.</b></li>
 									<ul>
 										<li><em>Remember, no-one is perfect, If you make a mistake, remember to apologise and learn from it. 
 											If someone says something that is incorrect, please make sure to correct them kindly, rather than berating them.</em></li>
 									</ul>
-								<li>The voices and needs of the most vulnerable in any given conversation should be prioritised.</li>
+								<li><b>The voices and needs of the most vulnerable in any given conversation should be prioritised.</b></li>
 									<ul>
 										<li><em>As such, please be conscious of how much space you’re taking up in a conversation. Please be 
 											extra conscious if you hold a privileged or dominant identity when discussing a form of inequality or oppression. 
 											Listen to and amplify the voices of those who have the lived experience; do not talk over them.</em></li>
 									</ul>
-								<li>Disagree with ideas, not people.</li>
+								<li><b>Disagree with ideas, not people.</b></li>
 									<ul>
 										<li><em>Use "I" statements to speak from your personal perspective, rather than making generalizations.</em></li>
 									</ul>
-								<li>Avoid playing devil’s advocate.</li>
+								<li><b>Avoid playing devil’s advocate.</b></li>
 									<ul>
 										<li><em>Specifically, do not argue for contrarian positions for the sake of debate. Only argue for positions that you 
 											actually hold.</em></li>
 									</ul>
-								<li>Be respectful of the emotions people may display – don’t let it take away from the content of their speech.</li>
+								<li><b>Be respectful of the emotions people may display – don’t let it take away from the content of their speech.</b></li>
 									<ul>
 										<li><em>Be aware that there can be a lot of emotional weight associated with lived experiences. Therefore, people may misspeak 
 											or become emotional when discussing an experience they have lived. Please be conscious that this is rooted in emotion 
@@ -95,7 +98,7 @@
 						<div class="container">
 
 							<header>
-								<h2>About Equitea</h2>
+								<h2 style="background-color: #ad4d38;">About Equitea</h2>
 							</header>
 
 							<p>No one person is responsible for all of science - we are the sum of all the diverse minds that contribute towards our 
@@ -115,7 +118,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Mission Statement</h2>
+								<h2 style="background-color: #ad4d38;">Mission Statement</h2>
 							</header>
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
@@ -194,7 +197,7 @@
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black"> </th>
 								</tr>
 								<tr style="text-align: left; border-bottom: 1px solid #e6eae9;">
-									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/ld.jpg" width="150" height="150"></th>
+									<th style="background-color: #FFFFFF; vertical-align: middle; color: black"><img src="images/ld.jpg" width="150" height="170"></th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Lucy Dolan<br>(she/her)</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">Speaker Liaison</th>
 									<th style="background-color: #FFFFFF; vertical-align: left; color: black">ldolan05 [at] qub.ac.uk</th>
@@ -235,19 +238,6 @@
 
 							<p>Have any comments/criticisms/general feedback? Feel free to let us know using
 								the Microsoft Form below - all responses will be anonymous!</p>
-
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
 
 						</div>
 					</section>
