--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules" align="left" style="color: #d0a99f; padding-left: 30pix; padding-right: 30pix">
+						<div id="groundrules" align="left" style="color: #d0a99f; margin-left: 10pix; margin-right: 10pix">
 							<font size="2">
+
+							<h5 style="color: #cfbcb7"><b>Our Ground Rules</b></h5>
+
 							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings. These points where
 								inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/">
@@ -87,7 +90,7 @@
 
 							<header>
 								<h2 class="alt">A forum for open discussion of issues and topics related to equity, diversity, and inclusion (EDI) 
-									in relation to astrophysics and academia as a whole.</a></h2>
+									in relation to astrophysics and academia as a whole</a></h2>
 							</header>
 
 						</div>
@@ -98,7 +101,7 @@
 						<div class="container">
 
 							<header>
-								<h2 style="background-color: #ad4d38;">About Equitea</h2>
+								<h2 style="background-color: #ad4d38; color: white;">About Equitea</h2>
 							</header>
 
 							<p>No one person is responsible for all of science - we are the sum of all the diverse minds that contribute towards our 
@@ -108,7 +111,7 @@
 							<p>We here in the Astrophysics Research Centre want to commit to promoting a welcoming, shared environment for anyone to
 								engage in freely. This equitea project aims to be our way of amplifying marginalised voices, allowing us to learn form
 								and improve our academic community for the current and future generations. This is a place for both minority groups and allies
-								alike - we only ask that you listen and learn!</p>
+								alike - we only ask that you listen and (most importantly) learn!</p>
 
 						</div>
 					</section>
@@ -118,7 +121,7 @@
 						<div class="container">
 
 							<header>
-								<h2 style="background-color: #ad4d38;">Mission Statement</h2>
+								<h2 style="background-color: #ad4d38; color: white;">Mission Statement</h2>
 							</header>
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
