--- a/index.html
+++ b/index.html
@@ -40,35 +40,35 @@
 						<div id="groundrules" align="left" style="color: #d0a99f; margin-left: 10pix; margin-right: 10pix">
 							<font size="2">
 
-							<h5 style="color: #cfbcb7"><b>Our Ground Rules</b></h5>
+							<h5><b style="color: #cfbcb7">Our Ground Rules</b></h5>
 
 							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings. These points where
-								inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/">
-								the University of Warwick Equitea</a> and <a href="https://sites.google.com/umich.edu/astro-dei/home?authuser=0">the University of Michigan Equitea</a>.</p>
+								inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/" style="color: #cfbcb7">
+								the University of Warwick Equitea</a> and <a href="https://sites.google.com/umich.edu/astro-dei/home?authuser=0" style="color: #cfbcb7">the University of Michigan Equitea</a>.</p>
 							
 								<ol align="center" style="line-height:90%">
-								<li><b>This is a space for everyone to learn and grow.</b></li>
+								<li><b style="color: #cfbcb7">This is a space for everyone to learn and grow.</b></li>
 									<ul>
 										<li><em>Remember, no-one is perfect, If you make a mistake, remember to apologise and learn from it. 
 											If someone says something that is incorrect, please make sure to correct them kindly, rather than berating them.</em></li>
 									</ul>
-								<li><b>The voices and needs of the most vulnerable in any given conversation should be prioritised.</b></li>
+								<li><b style="color: #cfbcb7">The voices and needs of the most vulnerable in any given conversation should be prioritised.</b></li>
 									<ul>
 										<li><em>As such, please be conscious of how much space you’re taking up in a conversation. Please be 
 											extra conscious if you hold a privileged or dominant identity when discussing a form of inequality or oppression. 
 											Listen to and amplify the voices of those who have the lived experience; do not talk over them.</em></li>
 									</ul>
-								<li><b>Disagree with ideas, not people.</b></li>
+								<li><b style="color: #cfbcb7">Disagree with ideas, not people.</b></li>
 									<ul>
 										<li><em>Use "I" statements to speak from your personal perspective, rather than making generalizations.</em></li>
 									</ul>
-								<li><b>Avoid playing devil’s advocate.</b></li>
+								<li><b style="color: #cfbcb7">Avoid playing devil’s advocate.</b></li>
 									<ul>
 										<li><em>Specifically, do not argue for contrarian positions for the sake of debate. Only argue for positions that you 
 											actually hold.</em></li>
 									</ul>
-								<li><b>Be respectful of the emotions people may display – don’t let it take away from the content of their speech.</b></li>
+								<li><b style="color: #cfbcb7">Be respectful of the emotions people may display – don’t let it take away from the content of their speech.</b></li>
 									<ul>
 										<li><em>Be aware that there can be a lot of emotional weight associated with lived experiences. Therefore, people may misspeak 
 											or become emotional when discussing an experience they have lived. Please be conscious that this is rooted in emotion 
