add banners to each section header

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Schedule</h2>
+								<h2 style="background-color: #ad4d38; color: white;">Schedule</h2>
 							</header>
 
 							<p>Currently our meetings are held once per semester, with times and dates subject to change based on availability.
@@ -171,7 +171,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Our Committee</h2>
+								<h2 style="background-color: #ad4d38; color: white;">Our Committee</h2>
 							</header>
 
 							<p>Our committee is made up of volunteers from the PGR and PDRA members at QUB. Membership will be 
