--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules" align="left" style="color: #d0a99f; margin-left: 10pix; margin-right: 10pix">
+						<div id="groundrules" align="left" style="color: #d0a99f; margin-left: 10pix;">
 							<font size="2">
 
-							<h5><b style="color: #cfbcb7">Our Ground Rules</b></h5>
+							<h5><br><b style="color: #cfbcb7; text-align: center;">Our Ground Rules</b></h5>
 
 							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings. These points where
