--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 							<h5><br><b style="color: #cfbcb7; text-align: center;">Our Ground Rules</b></h5>
 
 							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
-								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings. These points where
-								inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/" style="color: #cfbcb7">
-								the University of Warwick Equitea</a> and <a href="https://sites.google.com/umich.edu/astro-dei/home?authuser=0" style="color: #cfbcb7">the University of Michigan Equitea</a>.</p>
+								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings.</p>
 							
 								<ol align="center" style="line-height:90%">
 								<li><b style="color: #cfbcb7">This is a space for everyone to learn and grow.</b></li>
@@ -75,6 +73,9 @@
 											and should not take away from the content that they are trying to share.</em></li>
 									</ul>
 							</ol>
+
+							<p>These points where inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/" style="color: #cfbcb7">
+								the University of Warwick Equitea</a> and <a href="https://sites.google.com/umich.edu/astro-dei/home?authuser=0" style="color: #cfbcb7">the University of Michigan Equitea</a>.</p>
 							</font>
 						</div>
 				</div>
