remove align left

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules" align="left" style="color: #d0a99f; padding-left: 10pix;">
+						<div id="groundrules" style="color: #d0a99f; padding-left: 10pix;">
 							<font size="2">
 
 							<h5><br><b style="color: #cfbcb7; text-align: center;">Our Ground Rules</b></h5>
