edit line height

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules" align='left' style="color: #d0a99f; position: absolute; left: -30px;">
+						<div id="groundrules" align='left' style="color: #d0a99f; position: absolute; right: -30px;">
 							<font size="2">
 
 							<h5><br><b style="color: #cfbcb7; text-align: center;">Our Ground Rules</b></h5>
@@ -74,7 +74,7 @@
 									</ul>
 							</ol>
 
-							<p>These points where inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/" style="color: #cfbcb7">
+							<p style="line-height: 90%;">These points where inspired by similar codes of conduct from <a href="https://warwick.ac.uk/fac/sci/physics/research/astro/seminars/equitea/codeofconduct/" style="color: #cfbcb7">
 								the University of Warwick Equitea</a> and <a href="https://sites.google.com/umich.edu/astro-dei/home?authuser=0" style="color: #cfbcb7">the University of Michigan Equitea</a>.</p>
 							</font>
 						</div>
