--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules" align='left' style="color: #d0a99f; float: right;">
+						<div id="groundrules" align='left' style="color: #d0a99f; float: right; margin-left: 20px; margin-right: 20px;">
 							<font size="2">
 
 							<h5><br><b style="color: #cfbcb7; text-align: center;">Our Ground Rules</b></h5>
