--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 						</nav>
 
 					<!-- Ground Rules -->
-						<div id="groundrules" style="color: #d0a99f; float: right; margin-left: 20px; margin-right: 20px;">
+						<div id="groundrules" align='left' style="color: #d0a99f; float: right; margin-left: 10px; margin-right: 10px;">
 							<font size="2">
 
 							<h5><br><b style="color: #cfbcb7; text-align: center;">Our Ground Rules</b></h5>
 
-							<p style="line-height:90%; text-align: left;">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
+							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings.</p>
 							
 								<ol align="center" style="line-height:90%">
