--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div id="groundrules" align='left' style="color: #d0a99f; float: right; margin-left: 10px; margin-right: 10px;">
 							<font size="2">
 
-							<h5><br><b style="color: #cfbcb7; text-align: center;">Our Ground Rules</b></h5>
+							<h4 align="center"><br><b style="color: #cfbcb7; text-align: center;">Our Ground Rules</b></h5>
 
 							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings.</p>
