redo mission statement

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div id="groundrules" align='left' style="color: #d0a99f; float: right; margin-left: 10px; margin-right: 10px;">
 							<font size="2">
 
-							<h4 align="center"><br><b style="color: #dcc8c3; text-align: center;">Our Ground Rules</b></h5>
+							<h3 align="center"><br><b style="color: #dcc8c3; text-align: center;">Our Ground Rules</b></h5>
 
 							<p style="line-height:90%">We follow the <a href="https://aas.org/policies/ethics" style="color: #d5c1bc">AAS Code of Ethics</a> in our discussions, with
 								our own guidance below. Anyone who does not adhere to this code of conduct will be barred from future meetings.</p>
@@ -124,13 +124,16 @@
 							<header>
 								<h2 style="background-color: #ad4d38; color: white;">Mission Statement</h2>
 							</header>
-
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
-
-							<p>Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. In our sessions, 
-								we aim to create safe spaces that foster dialogue, understanding and empathy while encouraging participants to 
-								actively listen, learn and engage in meaningful conversations. We are dedicated to creating a department where 
-								every member is respected, valued and empowered to achieve their potential.</p>
+							
+							<table style="width: 1600px; max-width: 100%;">
+								<tr>
+									<th style="vertical-align: middle; background-color: transparent;"><img src="images/avatar.jpg" alt="" /></th>
+									<th style="vertical-align: left; background-color: transparent;">Our mission at Equitea is to champion and foster equality, 
+										diversity and inclusivity within ARC. In our sessions, we aim to create safe spaces that foster dialogue, understanding 
+										and empathy while encouraging participants to actively listen, learn and engage in meaningful conversations. We are 
+										dedicated to creating a department where every member is respected, valued and empowered to achieve their potential.</th>
+								</tr>
+							</table>
 
 						</div>
 					</section>
