opacity to zero

--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 							
 							<table style="width: 1600px; max-width: 100%;">
 								<tr>
-									<th style="vertical-align: middle; background-color: transparent;"><img src="images/avatar.jpg" alt="" /></th>
-									<th style="vertical-align: left; background-color: transparent;">Our mission at Equitea is to champion and foster equality, 
+									<th style="vertical-align: middle; background-color: transparent; opacity: 0.;"><img src="images/avatar.jpg" alt="" /></th>
+									<th style="vertical-align: left; background-color: transparent; opacity: 0.">Our mission at Equitea is to champion and foster equality, 
 										diversity and inclusivity within ARC. In our sessions, we aim to create safe spaces that foster dialogue, understanding 
 										and empathy while encouraging participants to actively listen, learn and engage in meaningful conversations. We are 
 										dedicated to creating a department where every member is respected, valued and empowered to achieve their potential.</th>
