--- a/index.html
+++ b/index.html
@@ -125,7 +125,15 @@
 								<h2 style="background-color: #ad4d38; color: white;">Mission Statement</h2>
 							</header>
 							
-							<table style="width: 1600px; max-width: 100%;">
+							<div class="imgtxt">
+								<div class="img"><img src="images/avatar.jpg" alt="" /></div>
+								<div class="text"><p>Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. 
+									In our sessions, we aim to create safe spaces that foster dialogue, understanding and empathy while encouraging 
+									participants to actively listen, learn and engage in meaningful conversations. We are dedicated to creating a 
+									department where every member is respected, valued and empowered to achieve their potential.</p></div>
+							</div>
+
+							<!-- <table style="width: 1600px; max-width: 100%;">
 								<tr>
 									<th style="vertical-align: middle; background-color: #eaeded; height: 300px; width: 300px;"><img src="images/avatar.jpg" alt="" /></th>
 									<th style="vertical-align: left; background-color: #eaeded; color: black">Our mission at Equitea is to champion and foster equality, 
@@ -133,7 +141,7 @@
 										and empathy while encouraging participants to actively listen, learn and engage in meaningful conversations. We are 
 										dedicated to creating a department where every member is respected, valued and empowered to achieve their potential.</th>
 								</tr>
-							</table>
+							</table> -->
 
 						</div>
 					</section>
