--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							</header>
 							
 							<div class="imgtxt">
-								<div class="img"><img src="images/avatar.jpg" alt="" /></div>
+								<div class="img"><img src="images/avatar.jpg" alt="" width="400" height="400"></div>
 								<div class="text"><p>Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. 
 									In our sessions, we aim to create safe spaces that foster dialogue, understanding and empathy while encouraging 
 									participants to actively listen, learn and engage in meaningful conversations. We are dedicated to creating a 
