--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 							<p>No one person is responsible for all of science - we are the sum of all the diverse minds that contribute towards our 
 								knowledge in every field. Not all of us are treated equally however, with many still subjected to acts of discrimination
-								which robs them of the the ability to exist in academic circles. </p>
+								which robs them of their ability to exist in academic circles. </p>
 
 							<p>We here in the Astrophysics Research Centre want to commit to promoting a welcoming, shared environment for anyone to
 								engage in freely. This equitea project aims to be our way of amplifying marginalised voices, allowing us to learn form
@@ -126,7 +126,7 @@
 							</header>
 							
 							<div class="imgtxt">
-								<div class="img"><img src="images/avatar.jpg" alt="" width="400" height="400"></div>
+								<div class="img"><img src="images/avatar.jpg" alt="" ></div>
 								<div class="text"><p>Our mission at Equitea is to champion and foster equality, diversity and inclusivity within ARC. 
 									In our sessions, we aim to create safe spaces that foster dialogue, understanding and empathy while encouraging 
 									participants to actively listen, learn and engage in meaningful conversations. We are dedicated to creating a 
